[package]
name = "compiler"
version = "0.1.0"
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lrpar = "0.10.1"
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lazy_static = "1.4.0"
compiler-functions = { path = "../compiler-functions" }

[build-dependencies]
lrpar = "0.10.1"
cfgrammar = "0.10.1"
lrlex = "0.10.1"
lazy_static = "1.4.0"
compiler-functions = { path = "../compiler-functions" }